ray-optics: fixed small issue with controls wrapping incorrectly

--- a/ray-optics/main.css
+++ b/ray-optics/main.css
@@ -72,7 +72,7 @@ header {
 	height: 15vh;
 	width: 90%;
 	display: flex;
-	flex-flow: row nowrap;
+	flex-flow: row wrap;
 	align-items: flex-start;
 	padding: 0.75vw 0;
 }
